split controller into seperate file

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -5,6 +5,12 @@
 	</div>
 </div>
 
+<p>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit Unde provident perspiciatis facere fu
+	 dicta accusantium sapiente vitae temporibus recusandae quibusdam vel ab quo, aliquid culpa
+	distinctio! Exercitationem, laboriosam. Vero, sa
+</p>
+
 <footer>
 	<a ui-sref="home">Home</a> | <a ui-sref="about">About</a>
 </footer>
