--- a/app/about/about.html
+++ b/app/about/about.html
@@ -1,4 +1,4 @@
-<p>test {{name}} just testing lmao :) lol</p>
+<p>,,,test {{name}} just testing lmao :) lol...</p>
 
 <footer>
 	<a ui-sref="home">Home</a> | <a ui-sref="about">About</a>
