es6 class for homecontroller

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -1,4 +1,4 @@
-<p>,,,test {{name}} just testing lmao :) lol...</p>
+<p>About page {{name}}...</p>
 
 <footer>
 	<a ui-sref="home">Home</a> | <a ui-sref="about">About</a>
